Added OpenAI integration for contract analysis

--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-<<<<<<< HEAD
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-=======
-    "dev": "NODE_ENV=development tsx server/index.ts",
->>>>>>> 0fff94551276f7c8ebb8637eacc2231c455f40fd
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
@@ -51,12 +47,12 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.0.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-<<<<<<< HEAD
     "file-type": "^21.0.0",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.4.2",
@@ -65,18 +61,10 @@
     "memorystore": "^1.6.7",
     "multer": "^2.0.1",
     "next-themes": "^0.4.6",
+    "openai": "^5.8.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pdf-parse": "^1.1.1",
-=======
-    "framer-motion": "^11.13.1",
-    "input-otp": "^1.4.2",
-    "lucide-react": "^0.453.0",
-    "memorystore": "^1.6.7",
-    "next-themes": "^0.4.6",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
->>>>>>> 0fff94551276f7c8ebb8637eacc2231c455f40fd
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -109,10 +97,7 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
-<<<<<<< HEAD
     "cross-env": "^7.0.3",
-=======
->>>>>>> 0fff94551276f7c8ebb8637eacc2231c455f40fd
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
