Modified the Client-side code to dynamically accept files and display the LLM o/p

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "incremental": true,
     "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
     "noEmit": true,
+    "target": "es2017", // ✅ Add this line
+    "downlevelIteration": true, // ✅ Add this for safety
     "module": "ESNext",
     "strict": true,
     "lib": ["esnext", "dom", "dom.iterable"],
